tests/errors/error-runtime1.lua
local f
-- f = nil
f("Hi mom!")
-- printf("Hi mom!\n")
